syntax = "proto3";

message Root {
  string schema_url = 1;
  bytes unencrypted_message = 2;
}
